# fact-check

./: .dockerignore  .env.example  .gitignore  DEBUG_FRONTEND.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_pipeline.db
backend/app/: __init__.py  main.py
data/evidence/: antisemitic_tropes.txt  conspiracy_theories_debunked.txt  holocaust_facts.txt  israel_palestine_context.txt  israel_palestine_history.txt  legitimate_criticism_guide.txt  legitimate_jewish_sources.txt  zionism_facts.txt
data/test-processed/: 4fbd8250-58cb-4ce8-8d49-e7b9e9a78f77.txt
deploy/: DEPLOYMENT.md  EC2_SETUP_CHECKLIST.md  QUICK_START.md  README.md  ec2-setup.sh  env.example.ec2  nginx-http-temp.conf  nginx-https.conf  setup-ssl.sh  vercel-build.sh  vercel-config.js  vercel.json
docs/: PROJECT_REFLECTION.md  antisemitic_trope_detection.md  architecture.md  architecture_fix.md  backend_improvements.md  claims.md  contributing.md  free_mode.md  gemini_setup.md  image_support.md  improvements.md  ingestion.md  large_document_handling.md  legitimate_sources.md  llm_context_analysis.md  performance_optimizations.md  religious_content_handling.md  system_flow_explanation.md  tone_detection_enhancement.md  verification_flow_fix.md
frontend/: README.md  app.js  index.html  next.config.js  package.json  styles.css
frontend/app/: layout.tsx  page.tsx
frontend/components/: Header.tsx  (+3 more)
scripts/: dev.sh  load_evidence.sh  test_pipeline.py
tests/: __init__.py  conftest.py  hello.docx  test.db  test_claims_service.py  test_documents_api.py  test_ingestion_service.py
(+24 files in other folders)
